--- a/App/components/orderpage/deal/deal-detail.html
+++ b/App/components/orderpage/deal/deal-detail.html
@@ -68,14 +68,14 @@
                                ng-show="product.productType == 1"
                                ng-disabled="section.selectedStepCount == section.totalStepCount"
                                ng-click="dealDetail.addToDeal(product,section)" ga="['send','event','Menu','Add Deal','Deals']">
-                                Add to deal
+                                Add
                             </a>
 
                             <a class="btn-quick-order btn-canel-cta btnaddtodeal btn btn-quick-order"
                                ng-show="product.productType == 2"
                                ng-disabled="section.selectedStepCount == section.totalStepCount"
                                ng-click="dealDetail.addSideToDeal(product,section)" ga="['send','event','Menu','Add Deal','Deals']">
-                                Add to deal
+                                Add
                             </a>
 
                         </rb-product-item>
