--- a/App/components/orderpage/mycart/cart-panel.html
+++ b/App/components/orderpage/mycart/cart-panel.html
@@ -101,7 +101,7 @@
     </table>
     <!-- #endregion -->
     <!-- #region Voucher -->
-    <div class="voucher">
+    <!--<div class="voucher">
         <div ng-show="!cartpanel.isVoucherApplied">
             <label>Voucher</label>
             <input type="text" class="form-control" placeholder="" ng-model="cartpanel.voucherCode">
@@ -110,7 +110,7 @@
             </button>
         </div>
 
-    </div>
+    </div>-->
     <div class="voucher-applied vocher-border">
         <div class="voucher-panel">
             <div class="pull-left voucher-remove">
