--- a/App/components/shared/header/header.html
+++ b/App/components/shared/header/header.html
@@ -18,14 +18,15 @@
                         <div class="menuicon-close-name">MENU</div>
                     </button>
                     <a class="navbar-brand" href="/" target="_self">
-                        <img src="/Images/pizza-hut-logo.png" alt="Pizza Hut Logo" class="img-responsive" />
+                        <span class="logo"></span>
+                        <!--<img src="/Images/pizza-hut-logo.png" alt="Pizza Hut Logo" class="img-responsive" />-->
                     </a>
                 </div>
                 <div class="navbar-collapse collapse">
 
                     <!--Navigation List -->
                     <ul class="nav navbar-nav">
-                        <li><a href="/order/bucket-meals" target="_self" title="menu">MENU</a></li>
+                        <li><a href="/order/bucket-meals" target="_self" title="menu">Menu</a></li>
                         <li class="separator">|</li>
                         <li><a href="/order/deals" target="_self">Deals</a></li>
                         <li class="separator">|</li>
