--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -18,7 +18,7 @@
 <html class="@browser @browserVersion ">
 <!--<![endif]-->
 <head>
-    <title>KFC</title>
+    <title>KFC Delivery</title>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <link href="~/favicon_kfc.ico" rel="shortcut icon" type="image/x-icon" />
