--- a/App/components/shared/footer/footer.html
+++ b/App/components/shared/footer/footer.html
@@ -11,9 +11,11 @@
                 <div class="col-sm-12 col-xs-12 col-md-3 col-lg-3">
                     <div class="say-hello">
                         <span>Get Social:</span>
-                        <a href="https://www.facebook.com/pizzahutnz" title="Connect on Facebook" ga="['send','event','Footer','{{footer.eventTrackingAction}}','Facebook']" class="fa fa-facebook-square" target="_blank"></a>
-                        <a href="https://www.instagram.com/pizzahutnz/" title="Connect on Instagram" ga="['send','event','Footer','{{footer.eventTrackingAction}}','Instagram']" class="fa fa-instagram" target="_blank"></a>
-                        <a href="https://www.youtube.com/nzpizzahut" title="Connect on YouTube" ga="['send','event','Footer','{{footer.eventTrackingAction}}','YouTube']" class="fa fa-youtube" target="_blank"></a>
+                        <a href="http://www.kfc.co.nz/" title="Connect on Twitter" ga="['send','event','Footer','{{footer.eventTrackingAction}}','Twitter']" class="fa fa-twitter-square" target="_blank"></a>
+                        <a href="https://www.facebook.com/kfcnz/" title="Connect on Facebook" ga="['send','event','Footer','{{footer.eventTrackingAction}}','Facebook']" class="fa fa-facebook-square" target="_blank"></a>
+                        <a href="https://www.instagram.com/kfcnz/" title="Connect on Instagram" ga="['send','event','Footer','{{footer.eventTrackingAction}}','Instagram']" class="fa fa-instagram" target="_blank"></a>
+                        <a href="https://www.youtube.com/user/kfcnz" title="Connect on YouTube" ga="['send','event','Footer','{{footer.eventTrackingAction}}','YouTube']" class="fa fa-youtube" target="_blank"></a>
+                        
                     </div>
                 </div>
 
@@ -63,13 +65,12 @@
                 </ul>
                 <ul>
                     <li><a target="_self" href="/opening-hours.html" ga="['send','event','Footer','{{footer.eventTrackingAction}}','Stores']">Store list</a></li>
-                    <li><a target="_self" href="/nutritional-info.html" ga="['send','event','Footer','{{footer.eventTrackingAction}}','Nutrition']">Nutrition</a></li>
-                    <li><a target="_self" href="/allergen-info.html" ga="['send','event','Footer','{{footer.eventTrackingAction}}','Allergens']">Allergens</a></li>
-                    <li><a href="http://www.servingupthefuture.co.nz/pizza-hut/work-with-us" ga="['send','event','Footer','{{footer.eventTrackingAction}}','Work with us']">Work with us</a></li>
-                    <li><a target="_self" href="/franchising" ga="['send','event','Footer','{{footer.eventTrackingAction}}','Franchising']">Franchising</a></li>
-                    <li><a target="_self" href="/about-us" ga="['send','event','Footer','{{footer.eventTrackingAction}}','About us']">About us</a></li>
-                    <li><a target="_self" href="https://gem.desk.com/?b_id=13881" ga="['send','event','Footer','{{footer.eventTrackingAction}}','FAQ']">FAQ</a></li>
-                    <li><a target="_self" href="https://gem.desk.com/customer/portal/emails/new?b_id=13881  " ga="['send','event','Footer','{{footer.eventTrackingAction}}','Contact us']">Contact us</a></li>
+                    <li><a target="_self" href="http://www.kfc.co.nz/files/nutritional-information.pdf" ga="['send','event','Footer','{{footer.eventTrackingAction}}','Nutrition']">Nutrition</a></li>
+                    <li><a target="_self" href="http://www.kfc.co.nz/files/allergens.pdf" ga="['send','event','Footer','{{footer.eventTrackingAction}}','Allergens']">Allergens</a></li>
+                    <li><a href="http://www.kfc.co.nz/" ga="['send','event','Footer','{{footer.eventTrackingAction}}','Work with us']">Work with us</a></li>                    
+                    <li><a target="_self" href="https://gem.desk.com/?b_id=13883" ga="['send','event','Footer','{{footer.eventTrackingAction}}','FAQ']">FAQ</a></li>
+                    <li><a target="_self" href="https://gem.desk.com/?b_id=13881" ga="['send','event','Footer','{{footer.eventTrackingAction}}','Help']">Help</a></li>
+                    <li><a target="_self" href="https://gem.desk.com/customer/portal/emails/new?b_id=13883" ga="['send','event','Footer','{{footer.eventTrackingAction}}','Contact us']">Contact us</a></li>
                     <li><a target="_self" href="/privacy-policy" ga="['send','event','Footer','{{footer.eventTrackingAction}}','Privacy policy']">Privacy policy</a></li>
                     <li><a target="_self" href="/terms-and-conditions" ga="['send','event','Footer','{{footer.eventTrackingAction}}','Terms & conditions']">Terms &amp; conditions</a></li>
                     <li><a target="_blank" href="http://www.restaurantbrands.co.nz" ga="['send','event','Footer','{{footer.eventTrackingAction}}','Restaurant brands']">Restaurant Brands</a></li>
