--- a/Styles/custom/slide-out.less
+++ b/Styles/custom/slide-out.less
@@ -3,7 +3,7 @@
 
 .side-panel {
     font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
-    background: #F0F0F0;
+    background: #e9e5de;
     position: fixed;
     /*position: absolute !important;  */
     top: 200px;
@@ -36,11 +36,11 @@
 }
 
 .side-panel h1 {
-    font-size: 26px;
+    font-size: 28px;
 }
 
 .side-panel h2 {
-    font-size: 20px;
+    font-size: 22px;
     border-bottom: 1px solid #adadad;
     padding-bottom: 5px;
     /*height: 22px;
@@ -85,19 +85,19 @@
 }
 
 .side-panel .tab-cart {
-    font-size: 22px;
+    font-size: 24px;
     text-indent: 0;
     top: 0;
 }
 
 .side-panel .tab-delivery {
-    font-size: 32px;
+    font-size: 34px;
     text-indent: 0px;
     top: 200px;
 }
 
 .side-panel .tab-customise-pizza {
-    font-size: 32px;
+    font-size: 34px;
     text-indent: 0px;
     top: 100px;
 }
@@ -111,7 +111,7 @@
 }
 
 .side-panel .side-panel-close {
-    font-size: 29px;
+    font-size: 31px;
     width: 38px;
     height: 56px;
     padding-top: 46%;
@@ -129,7 +129,7 @@
 }
 
 .side-panel .side-panel-close:hover {
-    color: #EB272E;
+    color: #c3102f;
     cursor: pointer;
 }
 
@@ -144,7 +144,7 @@
 }
 
 .side-panel .pickup-delivery table td {
-    font-size: 11px;
+    font-size: 13px;
 }
 
 .side-panel-bg-overlay {
