--- a/Styles/custom/variable.less
+++ b/Styles/custom/variable.less
@@ -14,7 +14,7 @@
 @brand-dark-gray: #323232;
 @brand-border-gray: #D0D0D0;
 @brand-border-gray-c: #CCC;
-@brand-close-button-hover: #EB272E;
+@brand-close-button-hover: #c3102f;
 @brand-check-mark-ok: #19A5A1;
 @brand-red: #ff0000;
 @brand-extra-light-pink: #F4CAB8;
@@ -23,10 +23,10 @@
 @brand-yellow: #FFFF00;
 @brand-dark-yellow:#FBCB09;
 @brand-turquoise: #26BCBD;
-@newbrand-red: #EF3E42;
+@newbrand-red: #c3102f;
 @newbrand-red-bottomborder: #822824;
 @newbrand-red-topborder: #C3140E;
-@newbrand-lightgold: #FFCAA6;
+@newbrand-lightgold: #fef2e3;
 @newbrand-black: #000;
 @newbrand-selected:#41AF05;
 
