--- a/App/components/orderpage/mycart/cart-panel.html
+++ b/App/components/orderpage/mycart/cart-panel.html
@@ -9,7 +9,7 @@
         <!-- #region Pizzas -->
         <thead ng-show="cartpanel.data.hasPizza">
             <tr>
-                <th colspan="5">Pizza</th>
+                <th colspan="5">Items</th>
             </tr>
         </thead>
 
