--- a/Styles/custom/pizzahut-detailed.less
+++ b/Styles/custom/pizzahut-detailed.less
@@ -96,6 +96,7 @@ button:hover {
     background: #C4C4C4;
     border: 1px solid #9E9E9E;
     border-radius: 2px !important;
+    font-size: 20px;
 }
 
 .ie input::-ms-clear {
@@ -125,10 +126,10 @@ input[type="search"]:focus,
 input[type="tel"]:focus,
 input[type="color"]:focus,
 .uneditable-input:focus {
-    border: 1px solid #26BCBD;
+    border: 1px solid #94887a;
     box-shadow: none;
     -webkit-box-shadow: none !important;
-    box-shadow: 0 0 2px #26BCBD !important;
+    box-shadow: 0 0 2px #94887a !important;
     outline: 0 none !important;
     /* fix for Android ICS */
     -webkit-user-modify: read-write-plaintext-only;
@@ -294,8 +295,8 @@ btn-secondary-cta {
 }
 
 .primary-order-now {
-    padding: 20px 50px;
-    margin: 30px auto;
+   padding: 7px 25px;
+    margin: 7px auto;
     font-family: @brand-font; //Oswald;
     font-size: 32px;
     text-transform: uppercase;
@@ -422,7 +423,7 @@ table.cart-total tbody tr td span.fa, .voucher-applied span.fa {
 
 table.cart-total tbody tr td {
     font-weight: bold;
-    font-size: 16px;
+    font-size: 23px;
 }
 
 table.cart-total tbody tr.description td {
@@ -446,7 +447,7 @@ table.cart-total thead tr th:first-child {
 table.cart-total tr th,
 table.cart-total tfoot td {
     font-weight: bold;
-    font-size: 18px;
+    font-size: 23px;
 }
 
 table.cart-total tfoot td {
@@ -637,18 +638,18 @@ legend {
 .navbar-inverse .navbar-nav > li > a {
     color: #FFF;
     font-family: @brand-font; //'Oswald', sans-serif;
-    font-size: 22px;
+    font-size: 30px;
     /*text-transform: uppercase;*/
 }
 
 
 .navbar-inverse .navbar-nav > li.separator {
-    padding-top: 12px;
+    padding-top: 3px;
     font-weight: bold;
     /*text-transform: uppercase;*/
     padding-left: 18px;
     padding-right: 18px;
-    font-size: 20px;
+    font-size: 30px;
 }
 
 .navbar-inverse .navbar-nav > li > a:hover {
@@ -732,7 +733,7 @@ a.btn-log-in:hover {
 
 #validationsuccess {
     left: 5px;
-    color: #19A5A1;
+    color: #c3102f;
     margin: 0 0 0 5px;
     font-size: 30px;
 }
@@ -1140,7 +1141,7 @@ p.add-cart-to-favourites span.fa-heart {
 .my-account-header h1,
 .general-content h1 {
     display: inline-block;
-    font-size: 28px;
+    font-size: 40px;
     /*text-transform: uppercase;*/
     margin: 0;
     padding: 15px 0;
@@ -1659,7 +1660,7 @@ p.flip-me,
     text-align: center !important;
     font-family: "Pakenham-Bold", "Source Sans Pro", sans-serif;
     font-style: normal;
-    font-size: 16px;
+    font-size: 22px;
     line-height: normal;
 }
 
@@ -1715,7 +1716,7 @@ p.flip-me {
 .back .description {
     border-top: 1px solid #BCBCBC;
     padding: 10px;
-    font-size: 15px;
+    font-size: 20px;
     line-height: normal;
     padding-bottom: 50%;
     cursor: pointer;
@@ -1746,13 +1747,13 @@ p.flip-me {
 .btn-customise {
     margin-right: 10px;
     color: #cba77b;
-    font-size: 16px;
+    font-size: 22px;
     display: inline-block;
     text-decoration: none;
     position: relative;
     padding: 10px 20px;
     border: solid 1px;
-    top: 1px;
+    top: 3px;
     border-radius: 2px!important;
     cursor: pointer;
 }
@@ -1987,7 +1988,7 @@ a.PromoLink {
 
 .promotion.happy-hour, .promotion.catering, .order-type > div {
     /*background: url("/images/promo_background.png") repeat scroll top left;*/
-    background-color:#7c6954;
+    background-color:#94887a;
 }
 
 
@@ -2237,7 +2238,7 @@ a.PromoLink {
     color: @brand-white;
     text-align: left;
     margin-top: 24px;
-    font-size: 16px;
+    font-size: 19px;
     font-weight: bold;
 }
 
@@ -2374,7 +2375,7 @@ color: #251a05;
 .footer-row-2 ul li {
     float: left;
     margin-right: 20px;
-    font-size: 13px;
+    font-size: 18px;
 }
 
 .footer-row-2 ul li:last-child {
@@ -2702,7 +2703,7 @@ color: #251a05;
 
 
 #pickupForm i.check-field-completed {
-    color: #cba77b;
+    color: #c3102f;
 }
 
 
@@ -2777,7 +2778,7 @@ color: #251a05;
     .modal-content input[type="password"],
     .modal-content input[type="email"] {
         width: 90%;
-        width: calc(~"(100%) - 35px");
+        width: calc(~"(100%) - 36px");
     }
 
     .modal-content label.errorMessage {
@@ -2933,7 +2934,7 @@ input[type="text"], input[type="email"], input[type="password"], select.form-con
 
 .order-sub-menu > .order-sub-menu-border > .type-spliter > .nav-tabs > li.active a {
     /*background: rgba(15, 14, 12, 0.4);*/
-    background:#7c6954;
+    background:#94887a;
     outline: 0;
     color: #cba77b;
     border-bottom: solid 1px #cba77b;
@@ -2948,9 +2949,9 @@ input[type="text"], input[type="email"], input[type="password"], select.form-con
     .order-sub-menu > .order-sub-menu-border > h1 {
         display: block;
         font-family: @brand-font; //"Oswald", "sans-serif";*/
-        font-size: 34px;
-        margin-bottom: 30px;
-        margin-top: 35px;
+        font-size: 40px;
+        /*margin-bottom: 30px;
+        margin-top: 35px;*/
         text-align: center;
         color: #251a05;
     }
@@ -3257,7 +3258,7 @@ display: none;
 
 
     .homepage-promo {
-        margin-top: -81px;
+        margin-top: -101px;
         height: 315px;
     }
 
@@ -3355,6 +3356,8 @@ display: none;
 
 .get-offers input, .get-offers span {
     float: left;
+    line-height:22px;
+    font-size:19px;
 }
 
 .disabled {
@@ -3385,7 +3388,7 @@ display: none;
     }
 
     .homepage-promo {
-        height: 335px;
+        height: 150px;
     }
 
     .homepage-promo img {
@@ -3592,7 +3595,7 @@ i.custom-check{
 }
 
 .check-selected-tab {
-    color: #19A5A1;
+    color: #c3102f;
     font: normal normal normal 14px/1 FontAwesome;
     font-size: 34px;
     text-rendering: auto;
@@ -3862,8 +3865,8 @@ a.get-offers-anchor:hover {
     padding: 12px 35px;
     border-radius: 4px!important;
     font-weight: 700;
-    background: #1FA3A0;
-    border: 1px solid #1FA3A0;
+    background: #c3102f;
+    border: 1px solid #c3102f;
 }
 
 .btn-checkout-buynow:hover {
@@ -3872,8 +3875,8 @@ a.get-offers-anchor:hover {
     padding: 12px 35px;
     border-radius: 4px!important;
     font-weight: 700;
-    background: #1FA3A0;
-    border: 1px solid #1FA3A0;
+    background: #c3102f;
+    border: 1px solid #c3102f;
     color:black;
 }
 
@@ -4097,6 +4100,7 @@ i.myaccount-check-field-completed {
 
 .contentholder {
     padding: 0 10px;
+    color: #251a05;
 }
 
 
@@ -4260,7 +4264,7 @@ body {
     display: block;
     width: 100%;
     border-bottom: 1px solid #BCBCBC;
-    color: #FFFFFF;
+    color: #251a05;
     margin-bottom: 20px;
     padding: 20px !important;
     text-align: left !important;
@@ -4339,7 +4343,7 @@ body {
     cursor: pointer;
 }
 .wrapper-order-now, .container.product-filter {
-  background-color:#7c6954;
+  background-color:#94887a;
   cursor: pointer;
 }
 
