--- a/Styles/custom/slide-out.css
+++ b/Styles/custom/slide-out.css
@@ -40,7 +40,7 @@
   font-size: 28px;
 }
 .side-panel h2 {
-  font-size: 22px;
+  font-size: 25px;
   border-bottom: 1px solid #adadad;
   padding-bottom: 5px;
   /*height: 22px;
@@ -149,7 +149,7 @@
 }
 .half-and-half .btns .btn.active,
 .half-and-half .btn.active i {
-  color: #19A5A1;
+  color: #c3102f;
 }
 .half-and-half .btn i {
   margin-right: 3px;
