--- a/Styles/custom/slide-out.less
+++ b/Styles/custom/slide-out.less
@@ -2,7 +2,7 @@
 /* General styles for all menus */
 
 .side-panel {
-    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: 'Pakenham-Bold',"Helvetica Neue",Helvetica,Arial,sans-serif;
     background: #e9e5de;
     position: fixed;
     /*position: absolute !important;  */
@@ -40,7 +40,7 @@
 }
 
 .side-panel h2 {
-    font-size: 22px;
+    font-size: 25px;
     border-bottom: 1px solid #adadad;
     padding-bottom: 5px;
     /*height: 22px;
@@ -172,7 +172,7 @@
 
 .half-and-half .btns .btn.active,
 .half-and-half .btn.active i {
-    color: #19A5A1;
+    color: #c3102f;
 }
 
 .half-and-half .btn i {
