--- a/App/components/orderpage/order-menu/order-menu-tab.html
+++ b/App/components/orderpage/order-menu/order-menu-tab.html
@@ -11,9 +11,10 @@
 <div class="container product-filter">
     <div>
         <button class="btn btn-filter btn-info btn-filter-pizzas" ng-class="{'filter-active': orderMenuTab.isSelected('bucket-meals')}" ng-click="orderMenuTab.selectSection('bucket-meals')">Bucket Meals</button>
-        <button ng-href="#" class="btn btn-filter btn-info btn-filter-new" ng-class="{'filter-active': orderMenuTab.isSelected('individual-meals')}" ng-click="orderMenuTab.selectSection('individual-meals')">Individual Meals <rb-order-menu-section-count product-section="individual-meals"></rb-order-menu-section-count></button>
-        <button ng-href="#" class="btn btn-filter btn-info btn-filter-deals" ng-class="{'filter-active': orderMenuTab.isSelected('deals') || orderMenuTab.isSelected('deal-detail')}" ng-click="orderMenuTab.selectSection('deals')">Burgers</button>
+        <button ng-href="#" class="btn btn-filter btn-info btn-filter-new" ng-class="{'filter-active': orderMenuTab.isSelected('individual-meals')}" ng-click="orderMenuTab.selectSection('individual-meals')">Individual Meals</button>
+        <button ng-href="#" class="btn btn-filter btn-info btn-filter-burgers" ng-class="{'filter-active': orderMenuTab.isSelected('burgers') || orderMenuTab.isSelected('burger-detail')}" ng-click="orderMenuTab.selectSection('burgers')">Burgers</button>
         <button ng-href="#" class="btn btn-filter btn-info btn-filter-sides" ng-class="{'filter-active': orderMenuTab.isSelected('sides')}" ng-click="orderMenuTab.selectSection('sides')">Extras</button>
+        <button ng-href="#" class="btn btn-filter btn-info btn-filter-deals" ng-class="{'filter-active': orderMenuTab.isSelected('deals') || orderMenuTab.isSelected('deal-detail')}" ng-click="orderMenuTab.selectSection('deals')">Deals</button>
     </div>
 </div>
 
@@ -33,7 +34,7 @@
                        right-caption="Delivery deals"
                        left-url="delivery"
                        right-url="delivery">
-        <span name="title-container">Burgers</span>
+        <span name="title-container">Deals</span>
         <div name="left-content">
             <rb-product-list header-class="product-list-header-no-border-bg" header-title="Pickup Deals" product-tab="dealCollection" is-nested="true"></rb-product-list>
         </div>
@@ -68,23 +69,28 @@
 </section>
 
 
+
+<section ng-if="orderMenuTab.isSelected('burgers')">
+    <rb-order-sub-menu section-name="deals" left-caption="Pick Up deals"
+                       right-caption="Delivery deals"
+                       left-url="delivery"
+                       right-url="delivery">
+        <span name="title-container">Burgers</span>
+        <div name="left-content">
+            <rb-product-list header-class="product-list-header-no-border-bg" header-title="Pickup Deals" product-tab="dealCollection" is-nested="true"></rb-product-list>
+        </div>
+        <div name="right-content">
+            <rb-product-list header-class="product-list-header-no-border-bg" header-title="Delivery Deals" product-tab="dealDelivery" is-nested="true"></rb-product-list>
+        </div>
+    </rb-order-sub-menu>
+</section>
+
+<section ng-if="orderMenuTab.isSelected('burger-detail')">
+    <rb-deal-detail></rb-deal-detail>
+</section>
+
+
 <!-- List Deals -->
 <section ng-if="orderMenuTab.isSelected('deliverArea')">
-    <div id="map_deliveryAreas" class="map_deliveryAreas"></div>
-    <script>
-        function initMap() {
-            var uluru = { lat: -25.363, lng: 131.044 };
-            var map = new google.maps.Map(document.getElementById('map_deliveryAreas'), {
-                zoom: 4,
-                center: uluru
-            });
-            var marker = new google.maps.Marker({
-                position: uluru,
-                map: map
-            });
-        }
-    </script>
-    <script async defer
-            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCsm6M64oDCngNgv4xKZ4-cwPAzT_BgrKk&callback=initMap">
-    </script>
+    
 </section>
