--- a/Styles/custom/variable.less
+++ b/Styles/custom/variable.less
@@ -15,7 +15,7 @@
 @brand-border-gray: #D0D0D0;
 @brand-border-gray-c: #CCC;
 @brand-close-button-hover: #c3102f;
-@brand-check-mark-ok: #19A5A1;
+@brand-check-mark-ok: #c3102f;
 @brand-red: #ff0000;
 @brand-extra-light-pink: #F4CAB8;
 @brand-pink: #FFABAE;
